terraform_project/security_group.tf
resource "aws_security_group" "servers_sg" {
  name   = "servers_security_group"
  vpc_id = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5432 # PostgreSQL
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["3.68.108.87/32"]
  }

  ingress {
    from_port   = 27017 # MongoDB
    to_port     = 27017
    protocol    = "tcp"
    cidr_blocks = ["3.68.108.87/32"]
  }

  ingress {
    from_port   = 6379 # Redis
    to_port     = 6379
    protocol    = "tcp"
    cidr_blocks = ["3.68.108.87/32"]
  }
}
